# truth_level_analysis

./: CMakeLists.txt  LICENCE  README.md
data/cross_section/: xsec_data.txt
data/sumw/: sumw_data.txt
python/: ttmet_dump_histos.py
python/hh_wwbb/tt_wt_comparisons/: setup.sh  tt_wt_comparison.py
src/: MT2.cxx  MT2_ROOT.cxx  hh_truth_validation.cxx  truth_cutflow.cxx  truth_ntupler.cxx  truth_selector_base.cxx  ttmet_truth_validation.cxx
src/utility/: ChainHelper.cxx  string_utils.cxx  utils.cxx
truth_level_analysis/: MT2_ROOT.h  helpers.h  hh_truth_validation.h  truth_cutflow.h  truth_ntupler.h  truth_selector_base.h  ttmet_truth_validation.h
truth_level_analysis/utility/: ChainHelper.h  string_utils.h
util/: run_hh_validation.cxx  run_truth_ntupler.cxx  run_truth_test.cxx  run_ttmet_validation.cxx  test_base.cxx
